[tool.poetry]
name = "ti4-deckdraw"
version = "0.1.0"
description = ""
authors = ["Graham Doerksen <46031209+gdoerksen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
ti4-deckdraw = "ti4_deckdraw.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
